Intermittent /css/css-text-decor/text-decoration-color.html | Testing http://web-platform.test:8000/css/css-text-decor/text-decoration-color.html == http://web-platform.test:8000/css/css-text-decor/reference/text-decoration-color-ref.html
Categories
(Core :: Layout: Text and Fonts, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: heycam)
References
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell unknown])
Attachments
(1 file)
Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=261730904&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/Z5nEIRhYTmWuzA5EmI1S_A/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://queue.taskcluster.net/v1/task/Z5nEIRhYTmWuzA5EmI1S_A/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2019-08-15T05:08:13.302Z] 05:08:13 INFO - TEST-START | /css/css-text-decor/text-decoration-color-recalc.html
[task 2019-08-15T05:08:13.309Z] 05:08:13 INFO - PID 18461 | 1565845693302 Marionette INFO Testing http://web-platform.test:8000/css/css-text-decor/text-decoration-color-recalc.html == http://web-platform.test:8000/css/css-text-decor/reference/text-decoration-color-recalc-ref.html
[task 2019-08-15T05:08:13.431Z] 05:08:13 INFO - PID 18461 | 1565845693429 Marionette INFO No differences allowed
[task 2019-08-15T05:08:13.432Z] 05:08:13 INFO - TEST-PASS | /css/css-text-decor/text-decoration-color-recalc.html | took 131ms
[task 2019-08-15T05:08:13.434Z] 05:08:13 INFO - TEST-START | /css/css-text-decor/text-decoration-color.html
[task 2019-08-15T05:08:13.441Z] 05:08:13 INFO - PID 18461 | 1565845693435 Marionette INFO Testing http://web-platform.test:8000/css/css-text-decor/text-decoration-color.html == http://web-platform.test:8000/css/css-text-decor/reference/text-decoration-color-ref.html
[task 2019-08-15T05:08:13.570Z] 05:08:13 INFO - PID 18461 | 1565845693562 Marionette INFO No differences allowed
[task 2019-08-15T05:08:13.614Z] 05:08:13 INFO - TEST-UNEXPECTED-FAIL | /css/css-text-decor/text-decoration-color.html | Testing http://web-platform.test:8000/css/css-text-decor/text-decoration-color.html == http://web-platform.test:8000/css/css-text-decor/reference/text-decoration-color-ref.html
[task 2019-08-15T05:08:13.615Z] 05:08:13 INFO - Found 7 pixels different, maximum difference per channel 255
[task 2019-08-15T05:08:13.615Z] 05:08:13 INFO - REFTEST IMAGE 1 (TEST):
[task 2019-08-15T05:08:13.615Z] 05:08:13 INFO - REFTEST IMAGE 2 (REFERENCE):
[task 2019-08-15T05:08:13.615Z] 05:08:13 INFO - TEST-INFO took 164ms
[task 2019-08-15T05:08:13.651Z] 05:08:13 INFO - PID 18461 | 1565845693643 Marionette INFO Stopped listening on port 46540
[task 2019-08-15T05:08:14.171Z] 05:08:14 INFO - Browser exited with return code 0
[task 2019-08-15T05:08:14.171Z] 05:08:14 INFO - PROCESS LEAKS None
[task 2019-08-15T05:08:14.172Z] 05:08:14 INFO - Closing logging queue
[task 2019-08-15T05:08:14.172Z] 05:08:14 INFO - queue closed
[task 2019-08-15T05:08:14.189Z] 05:08:14 INFO - Setting up ssl
[task 2019-08-15T05:08:14.209Z] 05:08:14 INFO - certutil |
[task 2019-08-15T05:08:14.230Z] 05:08:14 INFO - certutil |
[task 2019-08-15T05:08:14.246Z] 05:08:14 INFO - certutil |
[task 2019-08-15T05:08:14.246Z] 05:08:14 INFO - Certificate Nickname Trust Attributes
[task 2019-08-15T05:08:14.246Z] 05:08:14 INFO - SSL,S/MIME,JAR/XPI
[task 2019-08-15T05:08:14.246Z] 05:08:14 INFO -
[task 2019-08-15T05:08:14.246Z] 05:08:14 INFO - web-platform-tests CT,,
[task 2019-08-15T05:08:14.246Z] 05:08:14 INFO -
[task 2019-08-15T05:08:14.262Z] 05:08:14 INFO - Application command: /builds/worker/workspace/build/application/firefox/firefox --marionette about:blank -profile /tmp/tmpkYXtVE.mozrunner
[task 2019-08-15T05:08:14.270Z] 05:08:14 INFO - Starting runner
[task 2019-08-15T05:08:14.774Z] 05:08:14 INFO - PID 18711 | 1565845694766 addons.webextension.screenshots@mozilla.org WARN Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid extension permission: mozillaAddons
[task 2019-08-15T05:08:14.774Z] 05:08:14 INFO - PID 18711 | 1565845694766 addons.webextension.screenshots@mozilla.org WARN Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid extension permission: telemetry
[task 2019-08-15T05:08:14.774Z] 05:08:14 INFO - PID 18711 | 1565845694767 addons.webextension.screenshots@mozilla.org WARN Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid extension permission: resource://pdf.js/
[task 2019-08-15T05:08:14.774Z] 05:08:14 INFO - PID 18711 | 1565845694767 addons.webextension.screenshots@mozilla.org WARN Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid extension permission: about:reader*
[task 2019-08-15T05:08:17.526Z] 05:08:17 INFO - PID 18711 | 1565845697521 Marionette INFO Listening on port 46540
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 4•6 years ago
|
||
There are 60 total failures in the last 7 days: https://treeherder.mozilla.org/intermittent-failures.html#/bugdetails?startday=2019-08-17&endday=2019-08-24&tree=trunk&bug=1574066
Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263321918&repo=mozilla-inbound&lineNumber=10470
Sean, could you assign this to someone?
| Assignee | ||
Comment 5•6 years ago
|
||
I am looking into this test failing in bug 1533569. Maybe it's the same underlying issue.
| Assignee | ||
Comment 6•6 years ago
|
||
P2 since this is blocking enabling shared memory style sheets.
| Assignee | ||
Comment 7•6 years ago
|
||
I found some use of uninitialized memory, caused by this:
AFAICT, there's no relationship between whether the text run has detailed glyph records and whether the run consists entirely of simple glyphs. It's possible for a text run to have a ligature in it but still not to have detailed glyph records. So this optimization to avoid iterating through to find the simple glyphs isn't valid.
The result is that we underfill the SkTextBlobBuilder::RunBuffer, and during SkTextBlob::getIntercepts we can end up reading uninitialized glyph positions from that buffer.
| Assignee | ||
Comment 8•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 10•6 years ago
|
||
I retriggered the test in the comment 8 try run 30 times and didn't encounter the test failure.
| Assignee | ||
Comment 11•6 years ago
|
||
| Assignee | ||
Comment 12•6 years ago
|
||
A more general try run: https://treeherder.mozilla.org/#/jobs?repo=try&revision=c16f5f9f4cae8404498d65fddb25f3264d6bf39a
Comment 13•6 years ago
|
||
Comment 14•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Description
•