Bug 1574066 - Correctly count glyphs when determining text decoration intercepts. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D43396

--HG--
extra : moz-landing-system : lando